--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -1,1 +1,12 @@
 <!-- So criei para a pasta aparecer no git -->
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoNews - Administrator</title>
+</head>
+<body>
+    <h1>ADMIN PAGE</h1>
+</body>
+</html>
