--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -1,12 +1,18 @@
-<!-- So criei para a pasta aparecer no git -->
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoNews - Administrator</title>
-</head>
+<html>
 <body>
-    <h1>ADMIN PAGE</h1>
+    <form id="form" enctype="multipart/form-data" action="http://localhost:8081/news" method="post">
+        <input type="file" name="file" />
+        <br/>
+        <input type="submit" value="upload"></input>
+        <br/>
+        <img id="news-img">
+    </form>
+
+    <script>
+
+
+
+        
+    </script>
 </body>
-</html>
