Created the news page with a real time search algrithim implemented

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -10,7 +10,9 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="css/index.css">
 
+    <!-- Scripts (axios, jquery) -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <!-- pages header -->
