--- a/client/user/questionnaire.html
+++ b/client/user/questionnaire.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoNews - Página inicial</title>
+    <title>CoNews - Estou com covid-19?</title>
     <link rel="shortcut icon" href="../images/conews_logo.png">
 
     <!-- CSS files -->
@@ -43,7 +43,7 @@
     <!-- Page content -->
     <main id="app" >
         <div class="page-slogan">
-            <h1>Página inicial</h1>
+            <h1>Estou com covid-19?</h1>
         </div>
     </main>
 </body>
