--- a/client/user/transmission.html
+++ b/client/user/transmission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoNews - Página inicial</title>
+    <title>CoNews - Transmissão</title>
     <link rel="shortcut icon" href="../images/conews_logo.png">
 
     <!-- CSS files -->
