fixing transmission slogan

--- a/client/user/transmission.html
+++ b/client/user/transmission.html
@@ -43,7 +43,7 @@
     <!-- Page content -->
     <main id="app" >
         <div class="page-slogan">
-            <h1>Página inicial</h1>
+            <h1>Formas de transmissão</h1>
         </div>
     </main>
 </body>
