--- a/client/user/index.html
+++ b/client/user/index.html
@@ -9,6 +9,7 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/help.css">
 </head>
 <body>
     <!-- Main header -->
@@ -32,7 +33,7 @@
                 <a href="transmission.html">Formas de transmissão</a>
             </div>
             <div class="header-btn">
-                <a href="questionnaire.html">Estou com covid-19?</a>
+                <a href="quiz.html">Estou com covid-19?</a>
             </div>
             <div class="header-btn">
                 <a href="help.html">Ajuda</a>
@@ -44,6 +45,80 @@
     <main id="app" >
         <div class="page-slogan">
             <h1>Página inicial</h1>
+        </div>
+
+        <div id="display-info">
+            <!-- News -->
+            <div class="information">
+                <div class="title">
+                    <a href="news.html">
+                        <h3>Notícias</h3>
+                    </a>
+                </div>
+                <div class="text">
+                    <a href="news.html">
+                        <p>
+                            Visite nossa página de notícias e fique por dentro
+                            de tudo que está acontecendo no seu estado.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Symptoms -->
+            <div class="information">
+                <div class="title">
+                    <a href="symptoms.html">
+                        <h3>Sintomas</h3>
+                    </a>
+                </div>
+                <div class="text">
+                    <a href="symptoms.html">
+                        <p>
+                            Visite nossa página de sintomas para saber quais são
+                            os principais sintomas que o covid-19 pode causar.
+                            Visitie um médico para mais detalhes.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Transmissions -->
+            <div class="information">
+                <div class="title">
+                    <a href="transmission.html">
+                        <h3>Formas de transmissão</h3>
+                    </a>
+                </div>
+                <div class="text">
+                    <a href="transmission.html">
+                        <p>
+                            Veja quais são as formas de transmissão do vírus
+                            para poder se proteger e também proteger as demais 
+                            pessoas.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Questionary -->
+            <div class="information">
+                <div class="title">
+                    <a href="quiz.html">
+                        <h3>Estou com covid-19?</h3>
+                    </a>
+                </div>
+                <div class="text">
+                    <a href="quiz.html">
+                        <p>
+                            Responda algumas perguntas para saber se você
+                            está com covid-19. Lembrando que isso não é um 
+                            diagnóstico, recomenda-se procurar um médico
+                            em caso de sintomas.
+                        </p>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 </body>
