--- a/client/user/transmission.html
+++ b/client/user/transmission.html
@@ -32,7 +32,7 @@
                 <a href="transmission.html">Formas de transmissão</a>
             </div>
             <div class="header-btn">
-                <a href="questionnaire.html">Estou com covid-19?</a>
+                <a href="quiz.html">Estou com covid-19?</a>
             </div>
             <div class="header-btn">
                 <a href="help.html">Ajuda</a>
