--- a/client/user/news.html
+++ b/client/user/news.html
@@ -47,9 +47,12 @@
 
     <!-- Page content -->
     <main id="app" >
+        <!-- Slogan -->
         <div class="page-slogan">
             <h1>Notícias</h1>
         </div>
+
+        <!-- Content -->
         <div class="page-content">
             <div class="search-state">
                 <h3>Estado selecionado:</h3>
