--- a/client/user/index.html
+++ b/client/user/index.html
@@ -9,7 +9,7 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/help.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <!-- Main header -->
