Adding news in the DB

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -58,6 +58,7 @@
                             <option selected disabled hidden>Selecione um estado</option>
                             <option>AC</option>
                             <option>AL</option>
+                            <option>AP</option>
                             <option>AM</option>
                             <option>BA</option>
                             <option>CE</option>
@@ -72,6 +73,7 @@
                             <option>PB</option>
                             <option>PR</option>
                             <option>PE</option>
+                            <option>PI</option>
                             <option>RJ</option>
                             <option>RN</option>
                             <option>RS</option>
