--- a/client/user/index.html
+++ b/client/user/index.html
@@ -21,23 +21,23 @@
                     <img src="../images/conews_logo.png" alt="Logo da CoNews">
                 </a>
             </div>
-
+            
             <!-- Options -->
-            <div class="header-btn">
-                <a href="news.html">Notícias</a>
-            </div>
-            <div class="header-btn">
-                <a href="symptoms.html">Sintomas</a>
-            </div>
-            <div class="header-btn">
-                <a href="transmission.html">Formas de transmissão</a>
-            </div>
-            <div class="header-btn">
-                <a href="quiz.html">Estou com covid-19?</a>
-            </div>
-            <div class="header-btn">
-                <a href="help.html">Ajuda</a>
-            </div> 
+            <a href="news.html" class="header-btn">
+                Notícias
+            </a>
+            <a href="symptoms.html" class="header-btn">
+                Sintomas
+            </a>
+            <a href="transmission.html" class="header-btn">
+                Formas de transmissão
+            </a>
+            <a href="quiz.html" class="header-btn">
+                Estou com covid-19?
+            </a>
+            <a href="help.html" class="header-btn">
+                Ajuda
+            </a>
         </div>
     </header>
 
