--- a/client/user/help.html
+++ b/client/user/help.html
@@ -25,23 +25,23 @@
                     <img src="../images/conews_logo.png" alt="Logo da CoNews">
                 </a>
             </div>
-
+            
             <!-- Options -->
-            <div class="header-btn">
-                <a href="news.html">Notícias</a>
-            </div>
-            <div class="header-btn">
-                <a href="symptoms.html">Sintomas</a>
-            </div>
-            <div class="header-btn">
-                <a href="transmission.html">Formas de transmissão</a>
-            </div>
-            <div class="header-btn">
-                <a href="quiz.html">Estou com covid-19?</a>
-            </div>
-            <div class="header-btn">
-                <a href="help.html">Ajuda</a>
-            </div> 
+            <a href="news.html" class="header-btn">
+                Notícias
+            </a>
+            <a href="symptoms.html" class="header-btn">
+                Sintomas
+            </a>
+            <a href="transmission.html" class="header-btn">
+                Formas de transmissão
+            </a>
+            <a href="quiz.html" class="header-btn">
+                Estou com covid-19?
+            </a>
+            <a href="help.html" class="header-btn">
+                Ajuda
+            </a>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
         <div class="search-state">
             <h3>Estado selecionado:</h3>
             <select class="ls-select" v-model="selectedState" @click="searchHelp">
-                <option selected>Selecione um estado</option>
+                <option disabled selected>Selecione um estado</option>
                 <option>AC</option>
                 <option>AL</option>
                 <option>AM</option>
