Added symptoms and transmissions pages

--- a/client/user/symptoms.html
+++ b/client/user/symptoms.html
@@ -9,6 +9,7 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/symptoms.css">
 </head>
 <body>
     <!-- Main header -->
@@ -36,7 +37,7 @@
             </div>
             <div class="header-btn">
                 <a href="help.html">Ajuda</a>
-            </div> 
+            </div>
         </div>
     </header>
 
@@ -44,6 +45,71 @@
     <main id="app" >
         <div class="page-slogan">
             <h1>Sintomas</h1>
+        </div>
+
+        <div id="display-subtitle">
+            <div class="subinformation">
+                <div class="subtitle">
+                    <h3>Os sintomas se manifestam, em média, entre 5 e 14 dias após contato com o vírus.</h3>
+                </div>
+            </div>
+        </div>
+
+        <div id="display-info">
+            <!-- Sinstomas Comuns -->
+            <div class="information">
+                <div class="title">
+                    <h3>Sintomas Comuns</h3>
+                </div>
+                <div class="text">
+                    <p>
+                        Febre
+                    </p>
+                    <p>
+                        Tosse Seca
+                    </p>
+                    <p>
+                        Cansaço
+                    </p>
+                </div>
+            </div>
+
+            <!-- Sinstomas Graves -->
+            <div class="information">
+                <div class="title">
+                    <h3>Sintomas Graves</h3>
+                </div>
+                <div class="text">
+                    <p>
+                        Dificuldade de respirar
+                    </p>
+                    <p>
+                        Falta de ar
+                    </p>
+                    <p>
+                        Perda de fala ou movimento
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="display-info2">
+            <!-- Sinstomas menos Comuns -->
+            <div class="information2">
+                <div class="title2">
+                    <h3>Sintomas menos Comuns</h3>
+                </div>
+                <div class="text2">
+                    <p>
+                        Dor de garganta
+                    </p>
+                    <p>
+                        Coriza
+                    </p>
+                    <p>
+                        Dor de cabeça
+                    </p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
