--- a/client/user/transmission.html
+++ b/client/user/transmission.html
@@ -9,6 +9,7 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/transmission.css">
 </head>
 <body>
     <!-- Main header -->
@@ -36,7 +37,7 @@
             </div>
             <div class="header-btn">
                 <a href="help.html">Ajuda</a>
-            </div> 
+            </div>
         </div>
     </header>
 
@@ -44,6 +45,28 @@
     <main id="app" >
         <div class="page-slogan">
             <h1>Formas de transmissão</h1>
+        </div>
+
+        <div id="display-subtitle">
+            <div class="subinformation">
+                <div class="subtitle">
+                    <h3>A transmissão acontece de uma pessoa doente para outra ou por contato próximo por meio de:</h3>
+                </div>
+            </div>
+        </div>
+
+        <div id="display-info">
+            <!-- Sinstomas Comuns -->
+            <div class="information">
+                <div class="title">
+                    <h3>Tosse</h3>
+                    <h3>Espirro</h3>
+                    <h3>Catarro</h3>
+                    <h3>Gotículas de saliva</h3>
+                    <h3>Toque do aperto de mão</h3>
+                    <h3>Objetos e superfícies</h3>
+                </div>
+            </div>
         </div>
     </main>
 </body>
