--- a/client/user/help.html
+++ b/client/user/help.html
@@ -25,7 +25,7 @@
                     <img src="../images/conews_logo.png" alt="Logo da CoNews">
                 </a>
             </div>
-            
+
             <!-- Options -->
             <a href="news.html" class="header-btn">
                 Notícias
@@ -87,7 +87,7 @@
         <!-- Display state information -->
         <div class="display-help" v-if="findedHelp.name">
             <div class="help-info">
-                <h1>Posto de saúde para o estado: {{selectedState}}</h1>
+                <h1>Secretaria de saúde para o estado: {{selectedState}}</h1>
                 <h2>Nome:</h2>
                 <h3>{{findedHelp.name}}</h3>
                 <h2>Link para o site:</h2>
