--- a/client/user/quiz.html
+++ b/client/user/quiz.html
@@ -21,7 +21,7 @@
                     <img src="../images/conews_logo.png" alt="Logo da CoNews">
                 </a>
             </div>
-            
+
             <!-- Options -->
             <a href="news.html" class="header-btn">
                 Notícias
@@ -204,7 +204,7 @@
         </div>
 
         <div class="quiz" v-else>
-            <h1>Chace de você estar com covid-19:</h1>
+            <h1>Chance de você estar com covid-19:</h1>
             <h1 style="color: red;">{{ result }}%</h1>
         </div>
     </main>
